# gbr-eval

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  pyproject.toml  setup-local.sh
.claude/rules/: 00-eval-principles.md
.github/workflows/: ci.yml
.omc/state/: hud-stdin-cache.json  last-tool-error.json
docs/: BACKEND_ROADMAP.md  COMPARACAO_CAMPOS_EVAL_VS_SISTEMA.md  ENGINEERING-EVAL-GUIDE.md  FRONTEND_ROADMAP.md  GATE_DRYRUN_2026_04_18.md  LAYER_MAPPING.md  MANUAL_ENGENHEIRO.md  MANUAL_SISTEMA.md  NEGATIVE_CASES_TAXONOMY.md  NEGATIVE_EXAMPLES_TAXONOMY.md  PLAN-ONBOARDING-EVAL.md  PLAN-engineering-layer-gaps.md  PLAN-frontend-gaps.md  PLANO_EXECUCAO.md  PLANO_MULTI_PROJETO.md  PORTS.md  RFC-solver-pattern.md  SCHEMAS_SISTEMA_PRODUCAO.md  SELF-EVAL-FRONTEND-REPORT_2026-04-22.md  SESSION_2026_04_18.md  SKILL-INVENTORY.md  TRACK_A_ANNOTATION_MANUAL.md  TRACK_A_HANDOFF.md
runs/: atom_fe_pr100.json  atom_fe_pr101.json  atom_fe_pr102.json  atom_fe_pr103.json  atom_fe_pr96.json  atom_fe_pr98.json  atom_fe_pr99.json  baseline_2026_04_18.json  eng_backend_R1.json  eng_backend_R2.json  eng_backend_R3.json  eng_backend_R4.json  eng_frontend_20260422_192427.json  eng_frontend_R4.json  eng_frontend_R5.json  eng_frontend_R6.json  eng_frontend_R7.json  pr100_changed.json  pr100_v2.json  pr101_changed.json  pr101_v2.json  pr104_changed.json  pr104_v2.json  pr70_atom.json  pr94_atom.json  pr94_atom_v2.json  pr94_atom_v3.json  pr95_atom.json  pr95_changed.json  pr95_v2.json  pr96_atom.json  pr96_changed.json  pr96_v2.json  pr99_changed.json  pr99_v2.json  prod_frontend_20260422_192429.json  prod_frontend_20260422_192440.json  prod_frontend_R3.json  prod_frontend_R4.json  prod_frontend_R5.json  (+4 more)
tests/: test_calibration.py
tools/: capture_schemas.py  check_contract_drift.py  check_schema_sync.py  compute_hashes.py  eval_pr.py  export_schemas.py  generate_all_synthetic.py  generate_synthetic.py  generate_task_from_rule.py  sync_frontend.py
(+492 files in other folders)
