[project]
name = "gbr-eval"
version = "0.1.0"
description = "Eval-first quality framework for GarantiaBR products"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "click>=8.1,<9",
    "anthropic>=0.49,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.4",
    "mypy>=1.10,<2",
    "types-PyYAML>=6.0,<7",
]

[project.scripts]
gbr-eval = "gbr_eval.harness.runner:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gbr_eval"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
